# oauth-service-sample

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
src/: .env-copy  app.py
src/models/: document.py
src/routes/: auth.py  kyc.py  user.py
src/utils/: helper.py  oauth_utils.py
tests/: test_app.py
